--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
-PORT=4000
 
-CRYPT_SALT=10
+
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
+
+PORT=4000
+DB_TYPE=postgres  
+DB_HOST=localhost
+DB_PORT=5432  
+DB_USERNAME=postgres  
+DB_PASSWORD=postgres
+DB_DATABASE=postgres
+
+ 
