--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,44 @@
+
+
+
 services:
-  home-library-service:
-    container_name: nestapp
+  node:
+    container_name: nest_app
+    restart: unless-stopped
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - '4000:4000'
-    environment:
-      DB_TYPE: postgres
-      DB_USERNAME: postgres
-      DB_HOST: db # Host should be the name of the db service
-      DB_DATABASE: postgres
-      DB_PORT: 5432
-      DB_PASSWORD: postgres
-      JWT_SECRET_KEY: secret123123
-      JWT_SECRET_REFRESH_KEY: secret123123
-      TOKEN_EXPIRE_TIME: 1h
-      TOKEN_REFRESH_EXPIRE_TIME=: 4h
-      PORT: 4000
-
+      - ${PORT}:${PORT}
     depends_on:
-      - db
+      - postgres
+    env_file:
+      - .env
+    volumes:
+      - ./:/usr/app
+      - ignore:/usr/app/node_modules
     networks:
-      - my-network # Explicitly define the network
+      - app-network
 
-  db:
-    container_name: db
-    image: postgres:17
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      
+  postgres:
+    container_name: postgres
+    restart: unless-stopped
+    build: ./database
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    env_file:
+      - .env
+    command: postgres -c logging_collector=on
+    networks:
+      - app-network
     volumes:
       - pgdata:/var/lib/postgresql/data
-    networks:
-      - my-network # Use the same network as the app
-
-volumes:
-  pgdata:
 
 networks:
-  my-network:
-    driver: bridge # Use a custom bridge network for communication
+  app-network:
+    driver: bridge
+
+volumes:
+  ignore:
+  pgdata:
