--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@nestjs/cli": "^10.4.7",
     "@nestjs/common": "^10.4.8",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.8",
@@ -47,7 +48,6 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.7",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.8",
     "@types/bcrypt": "^5.0.2",
@@ -64,6 +64,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
