fix: Docker items save

--- a/.env
+++ b/.env
@@ -7,11 +7,9 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 
 
 PORT=4000
-DB_TYPE=postgres  
-DB_HOST=localhost
-DB_PORT=5432  
-DB_USERNAME=postgres  
-DB_PASSWORD=postgres
-DB_DATABASE=postgres
-
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=secure_password
  
