--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "test:refresh": "cross-env TEST_MODE=auth jest --testPathPattern refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "docker:compose:dev":"docker compose -f docker-compose.yml -f dev.docker-compose.yml up",
+    "docker:compose:prod": "docker compose -f docker-compose.yml up",
+    "docker:scan": "docker scout cves "
   },
   "dependencies": {
     "@nestjs/cli": "^10.4.7",
