--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "test:refresh": "cross-env TEST_MODE=auth jest --testPathPattern refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "docker:compose:dev":"docker compose -f docker-compose.yml -f dev.docker-compose.yml up",
-    "docker:compose:prod": "docker compose -f docker-compose.yml up",
-    "docker:scan": "docker scout cves "
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+
   },
   "dependencies": {
     "@nestjs/cli": "^10.4.7",
@@ -58,6 +56,7 @@
     "@types/jest": "29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
