--- a/.env
+++ b/.env
@@ -7,9 +7,13 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 
 
 PORT=4000
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres_node
 POSTGRES_USER=postgres_user
 POSTGRES_PASSWORD=test12345
+
+
+LOG_LEVEL=3    # Set log level (0-4 or 'error', 'warn', 'log', 'debug', 'verbose')
+LOG_MAX_SIZE_KB=20
  
